--- a/paper/poverty.bib
+++ b/paper/poverty.bib
@@ -22,7 +22,7 @@
   series = {Handbook of {{Income Distribution}}},
   volume = {2},
   pages = {937--979},
-  publisher = {{Elsevier}},
+  publisher = {Elsevier},
   doi = {10.1016/B978-0-444-59428-0.00012-6},
   url = {https://www.sciencedirect.com/science/article/pii/B9780444594280000126}
 }
@@ -82,7 +82,7 @@
   volume = {19},
   number = {2},
   pages = {93--110},
-  publisher = {{Duke University Press}},
+  publisher = {Duke University Press},
   issn = {2689-4092},
   doi = {10.5325/jafrideve.19.2.0093},
   url = {https://dx.doi.org/10.5325/jafrideve.19.2.0093}
@@ -96,7 +96,7 @@
   number = {arXiv:2211.15509},
   eprint = {2211.15509},
   primaryclass = {econ, q-fin},
-  publisher = {{arXiv}},
+  publisher = {arXiv},
   doi = {10.48550/arXiv.2211.15509},
   url = {http://arxiv.org/abs/2211.15509},
   archiveprefix = {arxiv}
@@ -139,7 +139,7 @@
   volume = {50},
   number = {11},
   pages = {1510--1522},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   issn = {0022-0388},
   doi = {10.1080/00220388.2014.951037},
   url = {https://doi.org/10.1080/00220388.2014.951037}
@@ -270,7 +270,7 @@
   volume = {6},
   number = {2},
   pages = {355--363},
-  publisher = {{Cambridge University Press}},
+  publisher = {Cambridge University Press},
   issn = {2049-8470, 2049-8489},
   doi = {10.1017/psrm.2016.40},
   url = {https://www.cambridge.org/core/journals/political-science-research-and-methods/article/abs/income-measures-in-crossnational-surveys-problems-and-solutions/9908EDBEF171961076F4647B30340085}
@@ -287,7 +287,7 @@
   eprint = {4017680},
   eprinttype = {jstor},
   pages = {377--393},
-  publisher = {{[Taylor \& Francis, Ltd., Third World Quarterly]}},
+  publisher = {[Taylor \& Francis, Ltd., Third World Quarterly]},
   issn = {0143-6597},
   url = {https://www.jstor.org/stable/4017680}
 }
@@ -308,7 +308,7 @@
   author = {Grad{\'i}n, Carlos},
   year = {2021},
   number = {2021/61},
-  institution = {{WIDER Working Paper}},
+  institution = {WIDER Working Paper},
   doi = {10.35188/UNU-WIDER/2021/999-0},
   url = {https://www.econstor.eu/handle/10419/243387},
   isbn = {9789292569990}
@@ -320,7 +320,7 @@
   author = {Grad{\'i}n, Carlos},
   year = {2021},
   month = mar,
-  institution = {{UNU-WIDER}},
+  institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-6},
   url = {https://www.wider.unu.edu/node/238517}
 }
@@ -331,7 +331,7 @@
   author = {Grad{\'i}n, Carlos},
   year = {2021},
   month = mar,
-  institution = {{UNU-WIDER}},
+  institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-4},
   url = {https://www.wider.unu.edu/node/238513}
 }
@@ -342,7 +342,7 @@
   author = {Grad{\'i}n, Carlos},
   year = {2021},
   month = mar,
-  institution = {{UNU-WIDER}},
+  institution = {UNU-WIDER},
   doi = {10.35188/UNU-WIDER/WTN/2021-5},
   url = {https://www.wider.unu.edu/node/238515}
 }
@@ -366,7 +366,7 @@
   volume = {40},
   number = {1},
   pages = {18--35},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   issn = {0143-6597},
   doi = {10.1080/01436597.2018.1535895},
   url = {https://doi.org/10.1080/01436597.2018.1535895}
@@ -382,7 +382,7 @@
   volume = {37},
   number = {5},
   pages = {749--767},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   issn = {0143-6597},
   doi = {10.1080/01436597.2015.1109439},
   url = {https://doi.org/10.1080/01436597.2015.1109439}
@@ -409,7 +409,7 @@
   volume = {7},
   number = {1},
   pages = {117--157},
-  publisher = {{De Gruyter}},
+  publisher = {De Gruyter},
   issn = {1948-1837},
   doi = {10.1515/jgd-2016-0021},
   url = {https://www.degruyter.com/document/doi/10.1515/jgd-2016-0021/html},
@@ -421,7 +421,7 @@
   booktitle = {{{IEO Evaluation Report}}},
   author = {IMF, {\relax IEO}},
   year = {2014},
-  publisher = {{International Monetary Fund}},
+  publisher = {International Monetary Fund},
   url = {https://www.elibrary.imf.org/display/book/9781475599510/ch005.xml},
   chapter = {IEO Evaluation Report},
   isbn = {978-1-4755-9951-0}
@@ -471,7 +471,7 @@
   volume = {12},
   number = {1},
   pages = {1--38},
-  publisher = {{Springer}},
+  publisher = {Springer},
   url = {https://ideas.repec.org//a/spr/revint/v12y2017i1d10.1007\_s11558-015-9239-3.html}
 }
 
@@ -479,7 +479,7 @@
   title = {Building the {{SDG}} Economy},
   author = {Kharas, Homi and McArthur, John},
   year = {2019},
-  institution = {{Brookings}},
+  institution = {Brookings},
   url = {https://cdn.givingcompass.org/wp-content/uploads/2019/10/23094009/Building-the-SDG-economy.pdf}
 }
 
@@ -492,7 +492,7 @@
   volume = {16},
   number = {9},
   pages = {095006},
-  publisher = {{IOP Publishing}},
+  publisher = {IOP Publishing},
   issn = {1748-9326},
   doi = {10.1088/1748-9326/ac1c27},
   url = {https://dx.doi.org/10.1088/1748-9326/ac1c27}
@@ -508,7 +508,7 @@
   volume = {7},
   number = {1},
   pages = {61--108},
-  publisher = {{De Gruyter}},
+  publisher = {De Gruyter},
   issn = {1948-1837},
   doi = {10.1515/jgd-2016-0025},
   url = {https://www.degruyter.com/document/doi/10.1515/jgd-2016-0025/html},
@@ -522,7 +522,7 @@
   year = {2013},
   month = dec,
   journal = {Policy Research Working Paper},
-  publisher = {{World Bank, Washington, DC}},
+  publisher = {World Bank, Washington, DC},
   doi = {10.1596/1813-9450-6719},
   url = {http://hdl.handle.net/10986/16935}
 }
@@ -548,8 +548,8 @@
   author = {Lakner, Christoph and Mahler, Daniel Gerszon and Negre, Mario and Prydz, Espen Beer},
   year = {2019},
   month = may,
-  address = {{Washington, DC}},
-  institution = {{World Bank}},
+  address = {Washington, DC},
+  institution = {World Bank},
   doi = {10.1596/1813-9450-8869},
   url = {https://openknowledge.worldbank.org/handle/10986/31796},
   copyright = {http://creativecommons.org/licenses/by/3.0/igo},
@@ -595,7 +595,7 @@
   title = {Financing the End of Extreme Poverty},
   author = {Manuel, Marcus and Desai, Harsh and Samman, Emma and Evans, Martin},
   year = {2018},
-  institution = {{ODI}},
+  institution = {ODI},
   url = {https://www.econstor.eu/handle/10419/190851},
   copyright = {http://www.econstor.eu/dspace/Nutzungsbedingungen}
 }
@@ -606,7 +606,7 @@
   year = {2020},
   eprint = {resrep51348},
   eprinttype = {jstor},
-  institution = {{ODI}},
+  institution = {ODI},
   url = {https://www.jstor.org/stable/resrep51348}
 }
 
@@ -619,7 +619,7 @@
   volume = {130},
   number = {10},
   pages = {2731--2769},
-  publisher = {{The University of Chicago Press}},
+  publisher = {The University of Chicago Press},
   issn = {0022-3808},
   doi = {10.1086/720458},
   url = {https://www.journals.uchicago.edu/doi/full/10.1086/720458}
@@ -648,7 +648,7 @@
   journal = {Journal of Globalization and Development},
   volume = {7},
   number = {2},
-  publisher = {{De Gruyter}},
+  publisher = {De Gruyter},
   issn = {1948-1837},
   doi = {10.1515/jgd-2016-0033},
   url = {https://www.degruyter.com/document/doi/10.1515/jgd-2016-0033/html}
@@ -660,8 +660,8 @@
   author = {Moatsos, Michail},
   year = {2021},
   month = mar,
-  address = {{Paris}},
-  institution = {{OECD}},
+  address = {Paris},
+  institution = {OECD},
   doi = {10.1787/e20f2f1a-en},
   url = {https://www.oecd-ilibrary.org/social-issues-migration-health/how-was-life-volume-ii\_e20f2f1a-en}
 }
@@ -701,7 +701,7 @@
   year = {2014},
   month = apr,
   number = {2429599},
-  address = {{Rochester, NY}},
+  address = {Rochester, NY},
   doi = {10.2139/ssrn.2429599},
   url = {https://papers.ssrn.com/abstract=2429599}
 }
@@ -752,8 +752,8 @@
   translator = {Rendall, Steven},
   year = {2022},
   month = apr,
-  publisher = {{Belknap Press: An Imprint of Harvard University Press}},
-  address = {{Cambridge, Massachusetts}},
+  publisher = {Belknap Press: An Imprint of Harvard University Press},
+  address = {Cambridge, Massachusetts},
   isbn = {978-0-674-27355-9}
 }
 
@@ -766,7 +766,7 @@
   series = {Working {{Paper Series}}},
   number = {15433},
   eprint = {15433},
-  publisher = {{National Bureau of Economic Research}},
+  publisher = {National Bureau of Economic Research},
   doi = {10.3386/w15433},
   url = {https://www.nber.org/papers/w15433},
   archiveprefix = {National Bureau of Economic Research}
@@ -783,7 +783,7 @@
   eprint = {40282341},
   eprinttype = {jstor},
   pages = {1--23},
-  publisher = {{Oxford University Press}},
+  publisher = {Oxford University Press},
   issn = {0257-3032},
   url = {https://www.jstor.org/stable/40282341}
 }
@@ -836,7 +836,7 @@
   year = {2015},
   month = oct,
   number = {2685096},
-  address = {{Rochester, NY}},
+  address = {Rochester, NY},
   doi = {10.2139/ssrn.2685096},
   url = {https://papers.ssrn.com/abstract=2685096}
 }
@@ -849,7 +849,7 @@
   year = {2020},
   month = feb,
   number = {3537705},
-  address = {{Rochester, NY}},
+  address = {Rochester, NY},
   doi = {10.2139/ssrn.3537705},
   url = {https://papers.ssrn.com/abstract=3537705}
 }
@@ -861,7 +861,7 @@
   year = {2019},
   month = feb,
   series = {Sustainable {{Infrastructure Series}}},
-  publisher = {{The World Bank}},
+  publisher = {The World Bank},
   doi = {10.1596/978-1-4648-1363-4},
   url = {https://elibrary.worldbank.org/doi/abs/10.1596/978-1-4648-1363-4},
   isbn = {978-1-4648-1363-4}
@@ -875,7 +875,7 @@
   volume = {2019},
   number = {2},
   pages = {437--533},
-  publisher = {{Johns Hopkins University Press}},
+  publisher = {Johns Hopkins University Press},
   issn = {1533-4465},
   doi = {10.1353/eca.2019.0017},
   url = {https://muse.jhu.edu/pub/11/article/764710}
@@ -888,7 +888,7 @@
   year = {2015},
   eprint = {resrep15864},
   eprinttype = {jstor},
-  institution = {{Sustainable Development Solutions Network}},
+  institution = {Sustainable Development Solutions Network},
   url = {https://www.jstor.org/stable/resrep15864}
 }
 
@@ -916,7 +916,7 @@
   volume = {0},
   number = {0},
   pages = {1--21},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   issn = {1356-3467},
   doi = {10.1080/13563467.2023.2217087},
   url = {https://doi.org/10.1080/13563467.2023.2217087}
@@ -943,7 +943,7 @@
   year = {2021},
   month = oct,
   pages = {87--116},
-  publisher = {{United Nations}},
+  publisher = {United Nations},
   doi = {10.18356/9789210056052c011},
   url = {https://www.un-ilibrary.org/content/books/9789210056052c011},
   collaborator = {{UNCTAD}},
@@ -961,7 +961,7 @@
   author = {Vorisek, Dana and Yu, Shu},
   year = {2020},
   month = feb,
-  publisher = {{World Bank, Washington, DC}},
+  publisher = {World Bank, Washington, DC},
   doi = {10.1596/1813-9450-9164},
   url = {https://openknowledge.worldbank.org/handle/10986/33407}
 }
@@ -971,7 +971,7 @@
   booktitle = {Neoliberalism, {{Globalization}}, and {{Inequalities}}},
   author = {Wade, Robert Hunter},
   year = {2007},
-  publisher = {{Routledge}},
+  publisher = {Routledge},
   isbn = {978-1-315-23108-2}
 }
 
@@ -994,7 +994,7 @@
   title = {Redefining {{Poverty}}},
   author = {Woodward, David and Abdallah, Saamah},
   year = {2010},
-  institution = {{new economics foundation}},
+  institution = {new economics foundation},
   url = {https://neweconomics.org/uploads/files/RBPLTechPub.pdf}
 }
 
